# plksim

./: .clang-format  CMakeLists.txt  README.md  build.sh
core/: CMakeLists.txt  config.cmake.in
core/include/plksim/: problem.hh  samples.hh  version.hh  version.hh.cmake.in
core/include/plksim/io/: output_format.hh
core/src/: problem.cc  problem_impl.cc  problem_impl.hh  samples.cc
core/src/data/: sample.hh  set_up.hh  set_up_base.hh
core/src/evaluation/: evaluation_base.hh  point_value_evaluation.hh
core/src/problem/: advection_problem.hh  elastic_problem.hh  helmholtz_problem.hh  laplace_problem.hh  problem_base.hh  problem_log.hh
core/src/problems/: helmholtz_problem.hh  laplace_problem.cc  laplace_problem.hh  problem_base.hh  problem_log.hh
core/src/solver/: laplace_global_solver.hh  laplace_kelly_solver.hh  laplace_solver.hh  solver.hh  solver_base.hh
core/src/util/: output_format_util.hh  time_util.hh
core/src/utils/: output_format_utils.hh  time_utils.hh  timer.cc  timer.hh
core/test/: problem.test.cc  samples.test.cc  version.test.cc
core/test/utils/: timer.test.cc
