cmake_minimum_required(VERSION 3.20)

file(STRINGS VERSION VERSION LIMIT_COUNT 1)
project("plksim" VERSION ${VERSION})

string(TOUPPER ${PROJECT_NAME} PROJECT_NAME_UPPER)

set(CMAKE_CXX_STANDARD 17)

enable_testing()

message("[***] CMAKE_SYSTEM_NAME=${CMAKE_SYSTEM_NAME}")
message("[***] CMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR}")
message("[***] CMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}")

add_subdirectory(${PROJECT_SOURCE_DIR}/core)